# ml-research

./: .gitignore  CLAUDE.md  RESEARCH_LOG.md  RunPod - 7 возможностей для повышения эффективности.md  STRATEGY.md  main.py  mamba2_arch.md  requirements-training.txt  requirements.txt  Самые важные метрики
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
docs/: PIPELINE_AUDIT_2026_04_16.md  SESSION_2026_04_16_RESULTS.md  TRAINING_PLAN.md  WR_IMPROVEMENT_IDEAS.md
modal_bakeoff/: app.py  pull_and_grid.sh
research/: CRYPTOLAKE_SCHEMA.md  HANDOFF_sub60_cascade.md  HDATA_EVENTS_PLAN.md  HDATA_RESULTS.md  HDX_LEVERS.md  MAKER_SIM.md  PLAN.md  PLAN_subminute_mamba2.md  README.md  TCN_CHECKPOINT.md  build_full_ledger_db.py  experiments.jsonl  full_ledger.db  hardware_ledger.jsonl  hd1_session_rev48_57.db  hypotheses.jsonl  ledger.py  rev50_lcurve_seed0.json  rev52_regsweep.json  rev54_c1_engineered_dense.json  rev56_lsweep.json  schema.sql  vm_runs.jsonl
runs/: VOLAWARE_FINAL_REPORT_2026_04_28.md
rust_ingest/: Cargo.toml  README.md
rust_ingest/src/: features.rs  lib.rs  live_sim.rs  main.rs
scripts/: alpha_screen.py  audit_f1_bug.py  b3_regime_grid.py  backtest.py  backtest_ensemble.py  backtest_teacher.py  bakeoff_3gpu.sh  bakeoff_parallel.sh  bakeoff_v1.py  bakeoff_v2.py  bakeoff_v3.py  baseline_360.py  bench_grid_fused.py  bench_grid_outer.py  build_cache.py  build_cryptolake_cache.py  build_iql_dataset.py  build_latency_dist.py  build_stacker_from_oof.py  build_stacker_meta_outputs.py  build_stacker_meta_v2.py  check_api.py  (+98 more)
(+101 files in other folders)
