[package]
name = "depth_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "depth_parser"
path = "src/main.rs"

[dependencies]
flate2 = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
ordered-float = "4.2"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
