[package]
name = "depth_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "depth_parser"
path = "src/main.rs"

[[bin]]
name = "feature_builder"
path = "src/bin/feature_builder.rs"

[[bin]]
name = "sim_labels"
path = "src/bin/sim_labels.rs"

[lib]
name = "scalper_ingest"
path = "src/lib.rs"

[dependencies]
flate2 = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
ordered-float = "4.2"
anyhow = "1.0"
arrow = "53"
parquet = "53"
ndarray = "0.16"
ndarray-npy = "0.9"
rayon = "1.10"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
